contrast resolved

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@ body {
 }
 
 .active  {
-    background-color: rgb(211, 45, 45);
+    background-color: rgb(68, 14, 14);
 }
 
 
